--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,11 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
     .videos
-        h1 Video
+        each video in videos
+            +videoBlock({
+                title: video.title,
+                videoFile: video.videoFile,
+                views: video.views,
+            })
