--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,4 +1,10 @@
 extends layouts/main
 
 block content
-    p Upload
+    .form-container
+        form(action=routes.upload, method="POST")
+            label(for='video') Video file
+            input(type="file", name="video", id="video")
+            input(type="text", name="title", placeholder="Title")
+            input(type="text", name="description", placeholder="Description")
+            input(type="submit", value="Upload Video")
